fix spacing between hero and technology section

--- a/assets/styles/common.blocks/_technologies.scss
+++ b/assets/styles/common.blocks/_technologies.scss
@@ -3,8 +3,9 @@
         @include list-reset;
         margin: 0 auto;
         text-align: center;
-        padding: 0 $base-padding*4;
+        padding: 0 5rem;
         @include for-size(sm) {
+            padding: 0 $base-padding*4;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
